[project]
name = "cc-sandbox"
version = "0.1.0"
description = "Claude Code Action sandbox project"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "langchain>=0.3.0",
    "langchain-openai>=0.2.0", 
    "langgraph>=0.2.0"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"